# hal-9001

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: external.cmake  external.cmake.in  release.cmake
src/: CMakeLists.txt  algorithm.h  bot.cpp  bot.h  disc.cpp  disc.h  field.cpp  field.h  main.cpp  setting_manager.cpp  setting_manager.h
src/mc/: montecarlo.cpp  montecarlo.h
src/mcts/: mcts.cpp  mcts.h  node.cpp  node.h
src/rulebased/: rulebased.cpp  rulebased.h
src/util/: halstring.cpp  halstring.h  random.h  timer.cpp  timer.h
tests/: CMakeLists.txt  field_tests.cpp  halstring_tests.cpp  node_tests.cpp  random_tests.cpp  rulebased_tests.cpp
